--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nathan Varghese
-#logo: /assets/img/headshot_circle.png
+logo: LinkedIn Profile 4.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
